# exercise5

./: CMakeLists.txt  build.sh  main  main.cpp
binarytree/: binarytree.cpp  binarytree.hpp
binarytree/lnk/: binarytreelnk.cpp  binarytreelnk.hpp
binarytree/vec/: binarytreevec.cpp  binarytreevec.hpp
bst/: bst.cpp  bst.hpp
bst/avl/: avl.cpp  avl.hpp
bst/rb/: rb.cpp  rb.hpp
container/: container.cpp  container.hpp
list/: list.cpp  list.hpp
queue/: queue.hpp
queue/lst/: queuelst.cpp  queuelst.hpp
queue/vec/: queuevec.cpp  queuevec.hpp
stack/: stack.hpp
stack/lst/: stacklst.cpp  stacklst.hpp
stack/vec/: stackvec.cpp  stackvec.hpp
vector/: vector.cpp  vector.hpp
zlasdtest/: test.cpp  test.hpp
zmytest/: test.cpp  test.hpp
zmytest/RandomGens/: RandomValues.cpp  RandomValues.hpp
zmytest/TreeUtils/: TreeUtilsFunctions.cpp  TreeUtilsFunctions.hpp
zmytest/TreeUtils/treeNavFunctions/: NavigateFunctions.cpp  NavigateFunctions.hpp
zmytest/UtilityFunctions/: Utils.cpp  Utils.hpp
zmytest/UtilityFunctions/commons/: commons.cpp  commons.hpp
